fixed people columns size, inner column size, line height and list item spacing

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -948,6 +948,18 @@ section > header > h1 {
     }
 }
 
+.people-section {
+    display: block;
+    float: left;
+    line-height: 1.1em;
+    .column {
+        width: 100%;
+    }
+    li {
+        margin-bottom: 0.5em;
+    }
+}
+
 /* @group RADAR PANEL */
 @import "elements/pushdowns.less";
 /* @end */
